--- a/Android-stick-navigation-layout/build.gradle
+++ b/Android-stick-navigation-layout/build.gradle
@@ -5,10 +5,13 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
+        classpath 'com.android.tools.build:gradle:1.5.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        //jcenter
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
     }
 }
 
@@ -17,6 +20,12 @@ allprojects {
         jcenter()
     }
     buildDir = "D:/tmp/${rootProject.name}/${project.name}"
+    //解决生成javadoc失败导致的上传不了bintray,  so  Disable javadoc check for Bintray upload
+    tasks.withType(Javadoc) {
+        // options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('X', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+    }
 }
 
 task clean(type: Delete) {
