--- a/Android-stick-navigation-layout/app/build.gradle
+++ b/Android-stick-navigation-layout/app/build.gradle
@@ -30,5 +30,8 @@ dependencies {
     compile 'com.heaven7.core.adapter:adapter:1.8.0'
     compile 'com.heaven7.core.util:util-v1:1.1.2'
 
+    compile 'com.jakewharton:butterknife:6.1.0'
+
+
 
 }
