extract scroll lib of nested scroll

--- a/Android-stick-navigation-layout/app/src/main/AndroidManifest.xml
+++ b/Android-stick-navigation-layout/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity2" />
+        <activity android:name=".demos.MultiplexStickyNavigationDemo"/>
+        <activity android:name=".demos.SimpleStickyNavigationDemo"/>
     </application>
 
 </manifest>
