finish nested scroll lib

--- a/Android-stick-navigation-layout/app/src/main/AndroidManifest.xml
+++ b/Android-stick-navigation-layout/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".demos.MultiplexStickyNavigationDemo"/>
         <activity android:name=".demos.SimpleStickyNavigationDemo"/>
+        <activity android:name=".demos.TestNestedScrollFrameLayout"/>
     </application>
 
 </manifest>
