--- a/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
+++ b/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
 
-    compile 'com.android.support:design:24.2.1'
-    compile 'com.heaven7.core.util:util-v1:1.1.2'
+    //compile 'com.android.support:design:24.2.1'
+    //compile 'com.heaven7.core.util:util-v1:1.1.2'
 
     compile project(':android-nestedscroll')
 }
