--- a/Android-stick-navigation-layout/android-nestedscroll/build.gradle
+++ b/Android-stick-navigation-layout/android-nestedscroll/build.gradle
@@ -23,3 +23,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
 }
+
+apply from: "bintrayUpload.gradle"
