--- a/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
+++ b/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     //compile 'com.android.support:design:24.2.1'
     //compile 'com.heaven7.core.util:util-v1:1.1.2'
 
+    //compile 'com.heaven7.android.scroll:android-nestedscroll:1.0'
     compile project(':android-nestedscroll')
 }
 
