--- a/Android-stick-navigation-layout/android-nestedscroll/build.gradle
+++ b/Android-stick-navigation-layout/android-nestedscroll/build.gradle
@@ -1,5 +1,32 @@
 apply plugin: 'com.android.library'
 
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'android-nestedscroll'   // Has to be same as your library module name
+
+    publishedGroupId = 'com.heaven7.android.scroll'
+    libraryName = 'android-nestedscroll'
+    artifact = 'android-nestedscroll'     // Has to be same as your library module name
+
+    libraryDescription = 'Android Library to make handle nested scrolling easilier.'
+
+    // Your github repo link
+    siteUrl = 'https://github.com/LightSun/Android-sticky-navigation-layout'
+    gitUrl = 'https://github.com/LightSun/Android-sticky-navigation-layout.git'
+    githubRepository= 'LightSun/Android-sticky-navigation-layout'
+
+    libraryVersion = '1.0'
+
+    developerId = 'Heaven7'
+    developerName = 'Chenjun'
+    developerEmail = 'donshine723@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
@@ -16,12 +43,19 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions{
+        abortOnError false
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-  //  testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
 }
 
-apply from: "bintrayUpload.gradle"
+// Place it at the end of the file
+apply from: 'installv1.gradle'
+apply from: 'bintrayv1.gradle'
