upload module android-sticky-navigation-layout to bintray

--- a/Android-stick-navigation-layout/sticky-navigation-layout/project.properties
+++ b/Android-stick-navigation-layout/sticky-navigation-layout/project.properties
@@ -4,7 +4,12 @@ project.groupId = com.heaven7.android.StickyLayout
 project.artifactId = sticky-navigation-layout
 project.packaging = aar
 project.siteUrl = https://github.com/LightSun/Android-sticky-navigation-layout
-project.gitUrl = https://github.com/LightSun/Android-sticky-navigation-layout.git
+project.githubRepo = LightSun/Android-sticky-navigation-layout
+#new
+project.desc = a lib of android sticky navigation layout.
+project.liscenseName = 'The Apache Software License, Version 2.0'
+project.licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+
 
 #javadoc
 javadoc.name=sticky-navigation-layout
