--- a/Android-stick-navigation-layout/sticky-navigation-layout/bintrayUpload.gradle
+++ b/Android-stick-navigation-layout/sticky-navigation-layout/bintrayUpload.gradle
@@ -1,5 +1,7 @@
-apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+//version = libraryVersion
 
 // load properties
 Properties properties = new Properties()
@@ -19,7 +21,14 @@ def projectArtifactId = properties.getProperty("project.artifactId")
 def projectVersionName = android.defaultConfig.versionName
 def projectPackaging = properties.getProperty("project.packaging")
 def projectSiteUrl = properties.getProperty("project.siteUrl")
-def projectGitUrl = properties.getProperty("project.gitUrl")
+def projectGitUrl = projectSiteUrl + ".git"
+def projectDesc = properties.getProperty("project.desc")
+
+def licenseName = properties.getProperty("project.liscenseName")
+def licenseUrl = properties.getProperty("project.licenseUrl")
+
+
+def githubRepository = properties.getProperty("project.githubRepo")
 
 def developerId = properties.getProperty("developer.id")
 def developerName = properties.getProperty("developer.name")
@@ -29,24 +38,32 @@ def bintrayUser = properties.getProperty("bintray.user")
 def bintrayApikey = properties.getProperty("bintray.apikey")
 
 def javadocName = properties.getProperty("javadoc.name")
+def bintrayRepo = "maven"
+def projectLicenses = ["Apache-2.0"]
 
-group = projectGroupId
+group = projectGroupId      // Maven Group ID for the artifact
+//------------------------------ install ------------------------------------//
 
-// This generates POM.xml with proper parameters
 install {
     repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
         pom {
             project {
-                name projectName
+                packaging projectPackaging
                 groupId projectGroupId
                 artifactId projectArtifactId
+
+                // Add your description here
+                name projectName
+                description projectDesc
                 version projectVersionName
-                packaging projectPackaging
                 url projectSiteUrl
+
+                // Set your license
                 licenses {
                     license {
-                        name 'The Apache Software License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        name licenseName
+                        url licenseUrl
                     }
                 }
                 developers {
@@ -60,24 +77,32 @@ install {
                     connection projectGitUrl
                     developerConnection projectGitUrl
                     url projectSiteUrl
+
                 }
             }
         }
     }
 }
 
-// This generates sources.jar
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
+//--------------------------------------------------------------
+
+if (project.hasProperty("android")) { // Android libraries
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from android.sourceSets.main.java.srcDirs
+    }
+
+    task javadoc(type: Javadoc) {
+        source = android.sourceSets.main.java.srcDirs
+        classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    }
+} else { // Java libraries
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
 }
 
-task javadoc(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-
-// This generates javadoc.jar
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
@@ -87,7 +112,6 @@ artifacts {
     archives javadocJar
     archives sourcesJar
 }
-
 // javadoc configuration
 javadoc {
     options{
@@ -100,17 +124,36 @@ javadoc {
     }
 }
 
-// bintray configuration
+// ---------------- Bintray -------------------------------------
+
+//Properties properties = new Properties()
+//properties.load(project.file('local.properties').newDataInputStream())
+
 bintray {
     user = bintrayUser
     key = bintrayApikey
+
     configurations = ['archives']
     pkg {
-        repo = "maven"
+        repo = bintrayRepo
         name = projectName
+        desc = projectDesc
         websiteUrl = projectSiteUrl
+        issueTrackerUrl = projectSiteUrl + '/issues'
         vcsUrl = projectGitUrl
-        licenses = ["Apache-2.0"]
+        licenses = projectLicenses
+        githubRepo = githubRepository        //Optional Github repository
+        githubReleaseNotesFile = 'README.md' //Optional Github readme file
         publish = true
+        publicDownloadNumbers = true
+        version {
+            desc = projectDesc
+            gpg {
+                sign = true //Determines whether to GPG sign the files. The default is false
+                passphrase = properties.getProperty("bintray.gpg.password")
+                //Optional. The passphrase for GPG signing'
+            }
+        }
     }
 }
+
