--- a/Android-stick-navigation-layout/android-nestedscroll/project.properties
+++ b/Android-stick-navigation-layout/android-nestedscroll/project.properties
@@ -4,7 +4,11 @@ project.groupId = com.heaven7.android.scroll
 project.artifactId = android-nestedscroll
 project.packaging = aar
 project.siteUrl = https://github.com/LightSun/Android-sticky-navigation-layout
-project.gitUrl = https://github.com/LightSun/Android-sticky-navigation-layout.git
+project.githubRepo = LightSun/Android-sticky-navigation-layout
+#new
+project.desc = a lib of process android nested scrolling.
+project.liscenseName = 'The Apache Software License, Version 2.0'
+project.licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
 
 #javadoc
 javadoc.name=android-nestedscroll
