fix a bug of lower api 21

--- a/Android-stick-navigation-layout/android-nestedscroll/bintrayUpload.gradle
+++ b/Android-stick-navigation-layout/android-nestedscroll/bintrayUpload.gradle
@@ -41,6 +41,7 @@ def javadocName = properties.getProperty("javadoc.name")
 def bintrayRepo = "maven"
 def projectLicenses = ["Apache-2.0"]
 
+version = projectVersionName
 group = projectGroupId      // Maven Group ID for the artifact
 //------------------------------ install ------------------------------------//
 
@@ -113,7 +114,7 @@ artifacts {
     archives sourcesJar
 }
 // javadoc configuration
-javadoc {
+/*javadoc {
     options{
         encoding "UTF-8"
         charSet 'UTF-8'
@@ -122,7 +123,7 @@ javadoc {
         links "http://docs.oracle.com/javase/7/docs/api"
         title javadocName
     }
-}
+}*/
 
 // ---------------- Bintray -------------------------------------
 
@@ -144,7 +145,7 @@ bintray {
         licenses = projectLicenses
         githubRepo = githubRepository        //Optional Github repository
         githubReleaseNotesFile = 'README.md' //Optional Github readme file
-        publish = false
+        publish = true
         publicDownloadNumbers = true
         version {
             desc = projectDesc
