--- a/Android-stick-navigation-layout/build.gradle
+++ b/Android-stick-navigation-layout/build.gradle
@@ -2,23 +2,24 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0' //2.2
+        classpath 'com.android.tools.build:gradle:3.0.1' //2.2
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         //jcenter
        // classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'//1.3
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7' //1.2
+        classpath 'com.novoda:bintray-release:0.8.0'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
     }
     buildDir = "D:/tmp/${rootProject.name}/${project.name}"
