--- a/Android-stick-navigation-layout/android-nestedscroll/build.gradle
+++ b/Android-stick-navigation-layout/android-nestedscroll/build.gradle
@@ -47,10 +47,10 @@ android {
         }
     }
 
-    lintOptions{
+    /*lintOptions{
         abortOnError false
         checkReleaseBuilds false
-    }
+    }*/
 }
 
 publish {
