--- a/Android-stick-navigation-layout/app/build.gradle
+++ b/Android-stick-navigation-layout/app/build.gradle
@@ -25,12 +25,14 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
 
-    implementation 'com.heaven7.core.adapter:adapter:1.8.0'
+    implementation 'com.heaven7.core.adapter:adapter:1.8.8'
     implementation 'com.heaven7.core.util:util-v1:1.1.2'
 
     implementation 'com.jakewharton:butterknife:6.1.0'
+    annotationProcessor 'com.jakewharton:butterknife:6.1.0'
 
-    //implementation project(':sticky-navigation-layout')
-    implementation 'com.heaven7.android.StickyLayout:sticky-navigation-layout:1.0.1'
+    implementation 'com.heaven7.android.scroll:android-nestedscroll:1.0'
+    implementation project(':sticky-navigation-layout')
+    //implementation 'com.heaven7.android.StickyLayout:sticky-navigation-layout:1.0.1'
 
 }
