--- a/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
+++ b/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 26
-        versionCode 101
-        versionName "1.0.1"
+        versionCode 102
+        versionName "1.0.2"
     }
     buildTypes {
         release {
@@ -17,10 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions{
+    /*lintOptions{
         abortOnError false
         checkReleaseBuilds false
-    }
+    }*/
 }
 
 publish {
