--- a/Android-stick-navigation-layout/app/build.gradle
+++ b/Android-stick-navigation-layout/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
@@ -31,6 +35,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:6.1.0'
     annotationProcessor 'com.jakewharton:butterknife:6.1.0'
 
+    //implementation project(':android-nestedscroll')
     implementation 'com.heaven7.android.scroll:android-nestedscroll:1.0'
     implementation project(':sticky-navigation-layout')
     //implementation 'com.heaven7.android.StickyLayout:sticky-navigation-layout:1.0.1'
