--- a/Android-stick-navigation-layout/android-nestedscroll/project.properties
+++ b/Android-stick-navigation-layout/android-nestedscroll/project.properties
@@ -1,4 +1,4 @@
-#project  保持你的library module的名字同artifactId一样 否则可能异常
+#project
 project.name = android-nestedscroll
 project.groupId = com.heaven7.android.scroll
 project.artifactId = android-nestedscroll
