--- a/Android-stick-navigation-layout/backup/project.properties
+++ b/Android-stick-navigation-layout/backup/project.properties
@@ -1,4 +1,4 @@
-#project  保持你的library module的名字同artifactId一样 否则可能异常
+#project
 project.name = sticky-navigation-layout
 project.groupId = com.heaven7.android.StickyLayout
 project.artifactId = sticky-navigation-layout
