--- a/Android-stick-navigation-layout/settings.gradle
+++ b/Android-stick-navigation-layout/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':sticky-navigation-layout', ':android-nestedscroll'
+include ':app', ':sticky-navigation-layout'//, ':android-nestedscroll'
