--- a/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
+++ b/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
@@ -17,10 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    /*lintOptions{
+    lintOptions{
         abortOnError false
         checkReleaseBuilds false
-    }*/
+    }
 }
 
 publish {
@@ -42,5 +42,3 @@ dependencies {
 
     implementation 'com.heaven7.android.scroll:android-nestedscroll:1.0'
 }
-
-//apply from: "bintrayUpload.gradle"
