--- a/Android-stick-navigation-layout/app/build.gradle
+++ b/Android-stick-navigation-layout/app/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife:6.1.0'
 
     implementation project(':android-nestedscroll')
-    implementation 'com.heaven7.android.StickyLayout:sticky-navigation-layout:1.0.2'
+    implementation('com.heaven7.android.StickyLayout:sticky-navigation-layout:1.0.2'){
+        exclude group:'com.heaven7.android.scroll'
+    }
 
     //implementation 'com.heaven7.android.scroll:android-nestedscroll:1.0'
     //implementation project(':sticky-navigation-layout')
