--- a/Android-stick-navigation-layout/app/src/main/AndroidManifest.xml
+++ b/Android-stick-navigation-layout/app/src/main/AndroidManifest.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.heaven7.android.sticky_navigation_layout.demo">
+    package="com.heaven7.android.sticky_navigation_layout.demo"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:appComponentFactory="@string/app_name"
+        tools:replace="android:appComponentFactory"
+        >
         <activity android:name=".EnterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
