--- a/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
+++ b/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
+apply from: '../androidx_compat.gradle'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 26
+        minSdkVersion 19
+        targetSdkVersion 28
         versionCode 102
         versionName "1.0.2"
     }
@@ -23,22 +23,14 @@ android {
     }
 }
 
-publish {
-    userOrg = 'lightsun'
-    groupId = 'com.heaven7.android.StickyLayout'
-    artifactId = 'sticky-navigation-layout'
-    desc = 'a lib of android sticky navigation layout.'
-    website = 'https://github.com/LightSun/Android-sticky-navigation-layout'
-    publishVersion = android.defaultConfig.versionName
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    //implementation 'com.android.support:appcompat-v7:26.1.0'
 
     //compile 'com.android.support:design:24.2.1'
     //compile 'com.heaven7.core.util:util-v1:1.1.2'
 
-    implementation 'com.heaven7.android.scroll:android-nestedscroll:1.0'
+    //implementation 'com.heaven7.android.scroll:android-nestedscroll:1.0'
+    implementation project(":android-nestedscroll")
 }
