--- a/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
+++ b/Android-stick-navigation-layout/sticky-navigation-layout/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'com.android.library'
 apply from: '../androidx_compat.gradle'
 
+group = 'com.github.LightSun.Android-sticky-navigation-layout'
+version = library_version
+
 android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
@@ -34,3 +37,32 @@ dependencies {
     //implementation 'com.heaven7.android.scroll:android-nestedscroll:1.0'
     implementation project(":android-nestedscroll")
 }
+
+//------------ multi lib >>> ------
+task sourcesJar(type: Jar) {
+    //classifier = 'sources'
+    getArchiveClassifier().set('sources')
+    from android.sourceSets.main.javaDirectories
+}
+artifacts {
+    archives sourcesJar
+}
+if (android.productFlavors.size() > 0) {
+    android.libraryVariants.all { variant ->
+        if (variant.name.toLowerCase().contains("debug")) {
+            return
+        }
+
+        def bundleTask = tasks["bundle${variant.name.capitalize()}"]
+
+        artifacts {
+            archives(bundleTask.archivePath) {
+                classifier variant.flavorName
+                builtBy bundleTask
+                name = project.name
+            }
+        }
+
+    }
+}
+//------------ multi lib  <<< ------
