--- a/Android-stick-navigation-layout/build.gradle
+++ b/Android-stick-navigation-layout/build.gradle
@@ -10,12 +10,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2' //2.2
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
-        // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        //jcenter
-       // classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
-        //classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.5'
        // classpath 'com.novoda:bintray-release:0.8.0'
     }
 }
